# Dependent-Type-Functional-Language

./: Makefile  README.md  lang.cabal
app/: Main.hs
grammar/: Lang.cf
libraries/: Bool.lib  Either.lib  Fin.lib  Id.lib  Nat.lib  Pair.lib  TnB.lib  Vec.lib
src/: App.hs  Logger.hs  Run.hs
src/IR/: BruijnConvertor.hs  FunctionDesugar.hs  InductiveDesugar.hs  IrGen.hs  LambdaDesugar.hs  NatDesugar.hs  PlatedExp.hs  SimplePiConvertor.hs
src/TypeCheck/: Context.hs  Expr.hs  Program.hs  Stmt.hs
test/: BoolElimFalse.hs  BoolElimTrue.hs  EitherElimLeft.hs  EitherElimRight.hs  FinElimTest.hs  FinLookup.hs  IdRefl.hs  IdSubst.hs  IdSym.hs  IdTrans.hs  Main.hs  NatElimNotZero.hs  NatElimZero.hs  PairSwap.hs  TnBBot.hs  TnBTop.hs  VecAppend.hs  VecElimTest.hs  VecHeadTest.hs  VecTailTest.hs
testFiles/Rubric/Bool/: elimFalse.afp  elimTrue.afp
testFiles/Rubric/Either/: elimLeft.afp  elimRight.afp
testFiles/Rubric/Fin/: elimTest.afp  lookup.afp
testFiles/Rubric/Id/: refl.afp  subst.afp  sym.afp  trans.afp
testFiles/Rubric/Nat/: elimNotZero.afp  elimZero.afp
testFiles/Rubric/Pair/: swap.afp
testFiles/Rubric/Tnb/: Bot.afp  Top.afp
testFiles/Rubric/Vec/: append.afp  elimTest.afp  head.afp  tail.afp
